syntax = "proto3";

package remotewrite;

import "github.com/cortexproject/cortex/pkg/cortexpb/cortex.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/open-panoptes/opni/plugins/metrics/apis/remotewrite";

// The RemoteWrite service is used by metrics nodes to post Prometheus metrics
// and rules to Cortex.
service RemoteWrite {
  rpc Push(cortexpb.WriteRequest) returns (cortexpb.WriteResponse);
  rpc SyncRules(Payload) returns (google.protobuf.Empty);
}

message Payload {
  map<string, string> Headers  = 3;
  bytes               Contents = 4;
}
